--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,5 @@
 [metadata]
-name = bunnycdn-storage
+name = python-bunnycdn-storage
 version = 0.1.1
 description = This package provides Bunny.net file storage for Django.
 long_description = file: README.md
@@ -8,7 +8,7 @@ author = Victor Igbokwe
 author_email = victor@victorigbokwe.site
 maintainer = Victor Igbokwe
 maintainer_email = victor@victorigbokwe.site
-url = https://github.com/exceptionalvic/bunnycdn-storage
+url = https://github.com/exceptionalvic/python-bunnycdn-storage
 license = MIT License
 keywords =
     django
